# MotionGPT

./: .gitignore  app.py  checkpoints  convert_feats_2_joints.ipynb  create_symlinks_and_finish_setup.sh  datasets  deps  experiments  improve_tokenizer.ipynb  main.py  nohup.out  pyproject.toml  requirements.txt  tokenizer.ipynb
configs/: assets.yaml  config_h3d_stage1.yaml
configs/codebook_experiments/: config_h3d_stage1.yaml
configs/parallel_branches/: config_h3d_stage1.yaml
configs/vq/: default.yaml  with_rotation_trick.yaml
mGPT/: config.py
mGPT/archs/: mgpt_vq.py
mGPT/archs/tools/: quantize_cnn.py
mGPT/data/: HumanML3D.py
mGPT/data/humanml/: dataset_t2m.py
mGPT/models/: base.py  mgpt.py
prepare/: download_pretrained_models.sh
