[project]
name = "motiongpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bert-score>=0.3.13",
    "gdown>=5.2.0",
    "git-lfs>=1.6",
    "gradio>=5.16.0",
    "imageio>=2.37.0",
    "librosa>=0.10.2.post1",
    "lightning>=2.3.3",
    "moviepy==1.0.2",
    "numba>=0.61.0",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pip>=24.0",
    "pyrender>=0.1.45",
    "pytorch-lightning>=2.3.3",
    "safetensors==0.4.2",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
    "smplx>=0.1.28",
    "spacy>=3.7.5",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "torch==2.0.1",
    "transformers==4.37.2",
    "wandb>=0.19.6",
]
